deposit: checkbox and radio list CSS fix
* BETTER Fixes problem with misaligned checkbox and radio list items.
  They are produced because wtforms does not wrap input elements into
  labels as it is intended by the bootstrap framework.

--- a/invenio/modules/deposit/static/css/deposit/form.css
+++ b/invenio/modules/deposit/static/css/deposit/form.css
@@ -80,6 +80,16 @@ span.ui-icon.ui-icon-circle-triangle-e {
   padding: 0 20px;
 }
 
+.checkbox > ul, .radio > ul {
+  list-style-type: none;
+  padding-left: 40px;
+}
+
+.checkbox > ul label, .radio > ul label {
+  font-weight: inherit;
+  padding-left: 0;
+}
+
 /*Uploader*/
 
 .uploaders {
